[package]
name = "distributed-scheduler"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AH-dark/distributed-scheduler.git"
authors = ["AH-dark <ahdark0428@gmail.com>"]
readme = "README.md"
license = "AGPL-3"

[features]
default = ["redis_driver"]

redis_driver = ["dep:redis"]

[dependencies]
thiserror = "1.0"
job_scheduler = "1.2.1"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time", "sync"] }
async-trait = "0.1"
log = "0.4"
md5 = "0.7.0"
hashring = "0.3.5"
uuid = { version = "1.9.1", features = ["v4"] }

redis = { version = "0.25", optional = true, features = ["tokio-rustls-comp"] }
