[package]
name = "distributed-scheduler"
description = "A distributed cronjob library"
keywords = ["distributed", "scheduler", "cronjob", "consistent-hashing"]
version = "2.2.3"
edition = "2021"
repository = "https://github.com/AH-dark/distributed-scheduler.git"
homepage = "https://github.com/AH-dark/distributed-scheduler"
authors = ["AH-dark <ahdark0428@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/distributed-scheduler"
rust-version = "1.71.0"
exclude = [".github", ".idea"]

[package.metadata.docs.rs]
features = ["driver-redis", "driver-etcd"]

[features]
default = []
full = ["driver-redis", "driver-etcd"]

driver-redis = ["dep:redis"]
driver-etcd = ["dep:etcd-client"]

[lib]
name = "distributed_scheduler"
path = "src/lib.rs"

[[example]]
name = "redis"
path = "examples/redis.rs"
required-features = ["driver-redis"]

[[example]]
name = "redis_zset"
path = "examples/redis_zset.rs"
required-features = ["driver-redis"]

[[example]]
name = "etcd"
path = "examples/etcd.rs"
required-features = ["driver-etcd"]

[[example]]
name = "local"
path = "examples/local.rs"
required-features = []

[[example]]
name = "tokio_run"
path = "examples/tokio_run.rs"
required-features = []

[dependencies]
async-trait = "0.1"
chrono = "0.4"
thiserror = "2.0"
hashring = "0.3.6"
job_scheduler_ng = "2.0.5"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }

etcd-client = { version = ">=0.14, <1.0", optional = true }
redis = { version = ">=0.26, <1.0", optional = true, features = ["tokio-comp"] }

[dev-dependencies]
tracing-subscriber = "0.3"
redis-test = { version = ">= 0.7, <1.0", features = ["aio"] }
redis = { version = ">=0.26, <1.0", features = ["tokio-comp", "connection-manager"] }
anyhow = "1.0"
